sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_DefaultShowLeadListNoExsiting__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_DefaultShowLeadListNoExsiting__c</fullName>
    <defaultValue>true</defaultValue>
    <label>リードまたは取引先に登録の際、ともに既存がない場合、リードのリストを表示</label>
    <type>Checkbox</type>
</CustomField>