sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_DispCompany__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_DispCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 会社名表示</label>
    <type>Checkbox</type>
</CustomField>