sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_DispEmail__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_DispEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 メール表示</label>
    <type>Checkbox</type>
</CustomField>