sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_DispLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_DispLastModifiedDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 最終更新日表示</label>
    <type>Checkbox</type>
</CustomField>