sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_DispLeadRectype__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_DispLeadRectype__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 リードレコードタイプ表示【移行済】</label>
    <type>Checkbox</type>
</CustomField>