sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_DispOwner__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_DispOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 所有者表示</label>
    <type>Checkbox</type>
</CustomField>