sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_DispState__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_DispState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 都道府県表示</label>
    <type>Checkbox</type>
</CustomField>