sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_DispTitle__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_DispTitle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 役職表示</label>
    <type>Checkbox</type>
</CustomField>