sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 名刺情報で上書きする【移行済】</label>
    <type>Checkbox</type>
</CustomField>