sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_RegistTodo__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_RegistTodo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リードに登録 ToDo登録【移行済】</label>
    <type>Checkbox</type>
</CustomField>