sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/LeadRegist_TodoSubject__c.field-meta.xml
<CustomField>
    <fullName>LeadRegist_TodoSubject__c</fullName>
    <label>リードに登録 ToDo件名【移行済】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>