sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/RenkeiContactToCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>RenkeiContactToCampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>リード用自動連携:キャンペーンIDが指定されていたとき、（作成、あるいは更新したとき）リードに加え取引先責任者もキャンペーンメンバーにする。</description>
    <inlineHelpText>リード用自動連携:キャンペーンIDが指定されていたとき、（作成、あるいは更新したとき）リードに加え取引先責任者もキャンペーンメンバーにする。</inlineHelpText>
    <label>リード用自動連携:取引先責任者もキャンペーンメンバーにする</label>
    <type>Checkbox</type>
</CustomField>