sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/RenkeiCreateContactOnAcountWithLead__c.field-meta.xml
<CustomField>
    <fullName>RenkeiCreateContactOnAcountWithLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>リード用自動連携:リードと取引先が既存で取引先が特定できて取引先責任者レコードがない場合、取引先責任者を作成する。</description>
    <inlineHelpText>リード用自動連携:リードと取引先が既存で取引先が特定できて取引先責任者レコードがない場合、取引先責任者を作成する。</inlineHelpText>
    <label>リード用自動連携:リード、取引先既存で取引先責任者を作成する【移行済】</label>
    <type>Checkbox</type>
</CustomField>