sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/RenkeiCreateContactOnAcountWithoutLead__c.field-meta.xml
<CustomField>
    <fullName>RenkeiCreateContactOnAcountWithoutLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>リード用自動連携:該当するリードはなく、取引先が既存で取引先が特定できて取引先責任者レコードがない場合、取引先責任者を作成する。このときリードは作らない。</description>
    <inlineHelpText>リード用自動連携:該当するリードはなく、取引先が既存で取引先が特定できて取引先責任者レコードがない場合、取引先責任者を作成する。このときリードは作らない。</inlineHelpText>
    <label>リード用自動連携:リードなく、取引先既存で取引先責任者を作成する【移行済】</label>
    <type>Checkbox</type>
</CustomField>