sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/RenkeiCreateLeadOnTooManyAccounts__c.field-meta.xml
<CustomField>
    <fullName>RenkeiCreateLeadOnTooManyAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>リード用自動連携:名刺に合致する既存の取引先が複数あり特定できないとき、リードを作る。</description>
    <inlineHelpText>リード用自動連携:名刺に合致する既存の取引先が複数あり特定できないとき、リードを作る。</inlineHelpText>
    <label>リード用自動連携:既存取引先が複数あり特定できないとき、リードを作る【移行済】</label>
    <type>Checkbox</type>
</CustomField>