sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/RenkeiUpdateAllLeadsOnCondition__c.field-meta.xml
<CustomField>
    <fullName>RenkeiUpdateAllLeadsOnCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>リード用自動連携:（上書き設定時）該当するリード複数を更新する。オフの場合、該当するリードが複数あったときは更新しない。</description>
    <inlineHelpText>リード用自動連携:（上書き設定時）該当するリード複数を更新する。オフの場合、該当するリードが複数あったときは更新しない。</inlineHelpText>
    <label>リード用自動連携:条件に合致する既存リードは全て更新する【移行済】</label>
    <type>Checkbox</type>
</CustomField>