sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/RenkeiUpdateToCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>RenkeiUpdateToCampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>リード用自動連携:キャンペーンIDが指定されていたとき、作成に加え更新でもキャンペーンメンバーにする。</description>
    <inlineHelpText>リード用自動連携:キャンペーンIDが指定されていたとき、作成に加え更新でもキャンペーンメンバーにする。</inlineHelpText>
    <label>リード用自動連携:更新でもキャンペーンメンバーにする</label>
    <type>Checkbox</type>
</CustomField>