sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/SRegistCampaignList__c.field-meta.xml
<CustomField>
    <fullName>SRegistCampaignList__c</fullName>
    <description>キャンペーンのリストに表示する条件
上限件数; 私のだけなら true を指定 ; 「状況」をカンマ区切り; 「種別」をカンマ区切り
例 &quot;5;true; ;&quot;</description>
    <inlineHelpText>キャンペーンのリストに表示する条件
上限件数; 私のだけなら true を指定 ; 「状況」をカンマ区切り; 「種別」をカンマ区切り
例 &quot;5;true; ;&quot;</inlineHelpText>
    <label>Sキャンペーンリストの候補条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>