sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/SRegistQueryLeadFields1__c.field-meta.xml
<CustomField>
    <fullName>SRegistQueryLeadFields1__c</fullName>
    <defaultValue>&quot;Company:2, Title:2, Email:2, PostalCode, State, City, Street&quot;</defaultValue>
    <description>Id,Name以外の画面に表示するリード項目の API名:数値 をカンマ区切りで指定してください。 
数値 は、 
・1はリストにのみ表示 
・2はリストとポップアップに表示 
・3はポップアップにのみ表示 
リスト、ポップアップともに記載順に表示します。</description>
    <inlineHelpText>Id,Name以外の画面に表示するリード項目の API名:数値 をカンマ区切りで指定してください。 
数値 は、 
・1はリストにのみ表示 
・2はリストとポップアップに表示 
・3はポップアップにのみ表示 
リスト、ポップアップともに記載順に表示します。</inlineHelpText>
    <label>Sリード登録時表示するリードの項目1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>