sfdx-source/SmartViscal/main/default/objects/SmartViscaf__SmartViscaConfig__c/fields/SRegistQueryLeadFields2__c.field-meta.xml
<CustomField>
    <fullName>SRegistQueryLeadFields2__c</fullName>
    <label>Sリード登録時表示するリードの項目2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>